Bug 1042294 - crash NS_ProxyRelease(nsIEventTarget*, nsISupports*, bool) during import. r=Standard8,a=Standard8 for landing release-affecting patch on CLOSED TREE